# Projekt_Inzynierski_Wersja_Podstawowa

./: .gitignore  README.md
Nadajnik/: Broadcast_Connector.cpp  Broadcast_Connector.hpp  Button.cpp  Button.hpp  Buttons_Field.cpp  Buttons_Field.hpp  CMakeLists.txt  Connection.cpp  Connection.hpp  Connection_Backend.cpp  Connection_Backend.hpp  Connection_Frontend.cpp  Connection_Frontend.hpp  Custom_Data_IO.cpp  Custom_Data_IO.hpp  Custom_Data_IO_Window.cpp  Custom_Data_IO_Window.hpp  Graphic_Manager.cpp  Graphic_Manager.hpp  Graphic_Warehouse.cpp  Graphic_Warehouse.hpp  Image_Receiver.cpp  Image_Receiver.hpp  Pernament_Connector.cpp  Pernament_Connector.hpp  System.cpp  System.hpp  Time.hpp  Time_Object.cpp  Time_Object.hpp  Window.cpp  Window.hpp  main.cpp  main_functions.hpp  sended_struct.cpp  sended_struct.hpp
Nadajnik/Graphic_Warehouse/: 20_fps.xcf  Connection_Camera_View.xcf  Plus.xcf  x0_5.xcf  x1.xcf
Odbiornik/: .gitignore  Broadcast_connector.cpp  Broadcast_connector.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Custom_Data_IO.cpp  Custom_Data_IO.hpp  Image_Sender.cpp  Image_Sender.hpp  Inzynierka  Pernament_Connector.cpp  Pernament_Connector.hpp  Sended_struct.cpp  Sended_struct.hpp  System.cpp  System.hpp  Time.hpp  Time_Object.cpp  Time_Object.hpp  cmake_install.cmake  main.cpp  main_functions.hpp
